Komma im Vorwort ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1149 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik/skript.latex
+++ b/linde-stochastik/skript.latex
@@ -100,7 +100,7 @@
   \url{http://www.minet.uni-jena.de/~joergs/skripte/pdf/} ist eine
   (mögliche) aktuellere Ausgabe verfügbar.
   
-  Jeder ist dazu aufgerufen Verbesserungen, Erweiterungen und
+  Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Feh\-ler\-kor\-rek\-tu\-ren für das \linebreak[4] Skript ein\-zu\-reichen
   bzw. zu melden oder selbst
   einzupflegen -- einfach eine eMail an die
