- Warnung und Fehler aus Skriptcheck bearbeitet
git-svn-id: https://svn.lug-jena.de/uni-skripte@1162 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -21,7 +21,7 @@
 \KOMAoptions{parskip=half*}
 \usepackage{ifthen}
 \usepackage{makeidx}
-\usepackage{color}
+\usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
 \usepackage[latin1]{inputenc}
@@ -1236,7 +1236,8 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
       nilpotent, so existiert ein $m\in\N$ mit $L^{m+1}=0$. Dann ist aber
       $(\ad_{a})^{m}=0$ für $a\in L$.
      \item["`$\Leftarrow$"'] Wir führen den Beweis per Induktion nach
-      $n\colon=\dim L$ durch. O.\,B.\,d.\,A. sei dabei $n\neq 0$. Nach der
+      $n\colon=\dim L$ durch. O.\,B.\,d.\,A.
+      sei dabei $n\neq 0$. Nach der
       Voraussetzung sind alle Elemente in der Unteralgebra $\ad(L)\subseteq \gl(L)$
       nilpotent. Nach \autoref{satz:32} existiert also ein $z\in
       L\setminus\{0\}$ mit $0= \ad_{x}(z)= [x,z]$ für alle $x\in L$. Dann ist
@@ -2913,7 +2914,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
     $[h_{\alpha}, h_{\beta}]=0\in L_{i}$. Für $\alpha\in\Pi_{i},
     \beta\in\Phi_{i}$ ist $[h_{\alpha}, e_{\beta}]=
     \beta(h_{\alpha})e_{\beta}\in L_{i}$. Für $\alpha, \beta\in\Phi_{i}$ mit
-    $\alpha+\beta\notin\Phi$ ist $[e_{\alpha}, e_{\beta}]=0\in L_{i}$ und f\"ur
+    $\alpha+\beta\notin\Phi$ ist $[e_{\alpha}, e_{\beta}]=0\in L_{i}$ und für
     $\alpha, \beta\in\Phi_{i}$ mit $\alpha+\beta\in\Phi$ ist
     $\alpha+\beta\in\Phi_{i}$. Denn $h_{\alpha+\beta}=h_{\alpha}+h_{\beta}\in
     H_{i}$. Also ist insgesamt $[e_{\alpha}, e_{\beta}]\in\C
