- Anmerkungen von prof. Kuelshammer zu Kapitel 8 - Vorlesung vom 2007-06-13 nachgetragen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1169 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -3450,6 +3450,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
 
 %satz 8.6
 \begin{satz}
+  \label{satz:86}
   Sei $L$ eine halbeinfache Lie-Algebra, $H, \Phi, h_{\lambda}, e_{\alpha}$
   wie üblich. Für zwei Wurzeln $\alpha,\beta$ mit der Eigenschaft
   $\alpha+\beta\in\Phi$ sei $N_{\alpha\beta}\in\C$ mit $[e_{\alpha},
@@ -3697,8 +3698,147 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
       \cup \{0\}$, also $\psi([e_{\alpha}, e_{\beta}])= \psi(0)=0=
       [\tilde{e}_{\phi(\alpha)}, \tilde{e}_{\phi(\beta)}]= [\psi(e_{\alpha}),
       \psi(e_{\beta})]$. Daher können wir beim Beweis nunmehr
-      $\alpha+\beta\in\Phi$ voraussetzen.
+      $\alpha+\beta\in\Phi$ voraussetzen. Dann ist
+      \begin{gather*}
+	\psi([e_{\alpha}, e_{\beta}])= N_{\alpha\beta}\psi(e_{\alpha+\beta})=
+	   N_{\alpha\beta}\tilde{e}_{\phi(\alpha+\beta)}=
+	   N_{\alpha\beta}\tilde{e}_{\phi(\alpha)+\phi(\beta)}\\
+	[\psi(e_{\alpha}), \psi(e_{\beta})]= [\tilde{e}_{\phi(\alpha)},
+	   \tilde{e}_{\phi(\beta)}]= \tilde{N}_{\phi(\alpha)\phi(\beta)}
+	   \tilde{e}_{\phi(\alpha)+\phi(\beta)}
+      \end{gather*}
+      Daher bleibt zu zeigen:
+      $N_{\alpha\beta}=\tilde{N}_{\phi(\alpha)\phi(\beta)}$ für alle $\alpha,
+      \beta\in\Phi$ mit $\alpha+\beta\in\Phi$. Offenbar ist $\psi(H_{\R})=
+      \tilde{H}_{\R}$ und $\psi(H^{+}_{\R})= \tilde{H}^{+}_{\R}$. Für $x,y\in
+      H_{\R}$ gilt also: $x<y\Leftrightarrow\psi(x)<\psi(y)$.
+
+      Für $\lambda, \mu\in\Phi$ gilt daher:
+      $h_{\lambda}<h_{\mu}\Leftrightarrow
+      \psi(h_{\lambda})<\psi(h_{\mu})\Leftrightarrow
+      \tilde{h}_{\phi(\lambda)}< \tilde{h}_{\phi(\mu)}$. Folglich ist
+      $(\lambda,\mu)$ genau dann speziell (extraspeziell), wenn
+      $(\phi(\lambda), \phi(\mu))$ speziell (extraspeziell) ist. Wir zeigen
+      zunächst: $N_{\alpha\beta}=\tilde{N}_{\phi(\alpha)\phi(\beta)}$ für alle
+      \emph{positiven} $\alpha, \beta\in\Phi$ mit $\alpha+\beta\in\Phi$. dazu
+      nehmen wir das Gegenteil an und wählen ein Gegenbeispiel
+      $(\alpha,\beta)$ so, dass $h_{\alpha+\beta}$ möglichst klein bezüglich
+      $<$ ist. Ist $(\alpha,\beta)$ extraspeziell, so ist $[e_{\alpha},
+      e_{\beta}]=e_{\alpha+\beta}$ nach Konstruktion. Also
+      $N_{\alpha\beta}=1$. Analog ist auch
+      $\tilde{N}_{\phi(\alpha)\phi(\beta)}=1$. Daher ist $(\alpha,\beta)$
+      nicht extraspeziell. Entweder $(\alpha, \beta)$ oder $(\beta, \alpha)$
+      ist speziell. Wegen $N_{\beta\alpha}=-N_{\alpha\beta}$ und
+     $\tilde{N}_{\phi(\beta)\phi(\alpha)}
+      =-\tilde{N}_{\phi(\alpha)\phi(\beta)}$ können wir annehmen, dass
+      $(\alpha, \beta)$ speziell ist. Wegen $\alpha+\beta\notin\Pi$ existiert
+      genau ein extraspezielles Paar $(\xi, \eta)\in\Phi\times\Phi$ mit
+      $\alpha+\beta=\xi+\eta$. Dann ist $0<h_{\xi}<h_{\alpha}<h_{\beta} <
+      h_{\eta}$ und nach \autoref{satz:86} gilt:
+      \begin{align*}
+	0 &= N_{\alpha\beta}N_{-\xi,-\eta}+ N_{\beta,-\xi}N_{\alpha,-\eta}+
+	   N_{-\xi,\alpha}N_{\beta,-\eta}\\
+	0 &= \tilde{N}_{\phi(\alpha)\phi(\beta)} \tilde{N}_{\phi(-\xi)
+	   \phi(-\eta)} + \tilde{N}_{\phi(\beta)\phi(-\xi)}
+	   \tilde{N}_{\phi(\alpha)\phi(-\eta)}+
+	   \tilde{N}_{\phi(-\xi)\phi(\alpha)} \tilde{N}_{\phi(\beta)\phi(-\eta)}
+      \end{align*}
+      Wir werden daher nacheinander
+      $N_{-\xi,-\eta} = \tilde{N}_{\phi(-\xi) \phi(-\eta)},\dotsc,
+      \tilde{N}_{\beta,-\eta} = \tilde{N}_{\phi(\beta) \phi(-\eta)}$ zeigen.
+      Wegen $N_{-\xi,-\eta}\neq0$ wird daraus $N_{\alpha\beta}=
+      \tilde{N}_{\phi(\alpha) \phi(\beta)}$ folgen.
+      \begin{itemize}
+       \item Bezeichnet man die $\xi$"~Kette durch $\eta$ mit
+	$\eta-s\xi,\dotsc, \eta,\dotsc, \eta+t\xi$, so ist
+	$\phi(\eta)-s\phi(\xi),\dotsc, \phi(\eta),\dotsc,
+	\phi(\eta)+t\phi(\xi)$ die $\phi(\xi)$"~Kette durch $\phi(\eta)$. Nach
+	\autoref{satz:85} und \autoref{satz:86} gilt also:
+	\begin{align*}
+	  N_{-\xi,-\eta} &= -(s+1)t \nicefrac{\kappa_{L}(h_{\xi}, h_{\xi})}{2}
+	     = -(s+1)t \nicefrac{\kappa_{\tilde{L}}(\psi(h_{\xi}),
+	     \psi(h_{\xi}))}{2}\\
+	  &= -(s+1)t \nicefrac{\kappa_{\tilde{L}}(\tilde{h}_{\phi(\xi),
+	     \tilde{h}_{\phi(\xi)}})}{2}= \tilde{N}_{-\phi(\xi),-\phi(\eta)}=
+	     \tilde{N}_{\phi(-\xi)\phi(-\eta)}
+	\end{align*}
+       \item Ist $\beta-\xi\notin\Phi$, so ist $N_{\beta,-\xi}=0=
+	N_{\phi(\beta) \phi(-\xi)}$. Ist $\beta-\xi\in\Phi$ so ist $(\xi,
+	\beta-\xi)$ nach Wahl von $(\alpha, \beta)$ kein Gegenbeispiel.
+	Bezeichnet man die $\xi$"~Kette durch $\beta-\xi$ mit $\beta-\xi-s'
+	\xi,\dotsc, \beta-\xi,\dotsc, \beta-\xi+t'\xi$, so gilt analog:
+	\begin{align*}
+	  N_{\beta,-\xi} &= N_{-\xi, \xi-\beta}= -(s'+1)t'
+	     \nicefrac{\kappa_{L}(h_{\xi}, h_{\xi})}{(2N_{\xi,\beta-\xi})}\\
+	  &= -/s'+1)t' \nicefrac{\kappa_{\tilde{L}}(\psi(h_{\xi}),
+	     \psi(h_{\xi}))}{(2 \tilde{N}_{\phi(\xi) \phi(\beta-\xi)})}\\
+	  &= -(s'+1)t' \nicefrac{\kappa_{\tilde{L}}(\tilde{h}_{\phi(\xi),
+	     \tilde{h}_{\phi(\xi)}})}{(2 \tilde{N}_{\phi(\xi), \phi(\beta)-
+	     \phi(\xi)})} = \tilde{N}_{-\phi(\xi), \phi(\xi)-\phi(\beta)}\\
+	  &= \tilde{N}_{\phi(\beta) \phi(-\xi)}
+	\end{align*}
+       \item Ist $\alpha-\eta\notin\Phi$, so ist $N_{\alpha,-\eta}=0=
+	\tilde{N}_{\phi(\alpha) \phi(-\eta)}$. Ist $\alpha-\eta\in\Phi$, so
+	ist $(\eta-\alpha, \alpha)$ kein Gegenbeispiel. Daher ist:
+	\begin{align*}
+	  N_{\alpha,-\eta} &= N_{-\eta,\eta-\alpha} = N_{\eta-\alpha,\alpha} =
+	     \tilde{N}_{\phi(\eta-\alpha) \phi(\alpha)}=
+	     \tilde{N}_{\phi(\eta)-\phi(\alpha), \phi(\alpha)} =
+	     \tilde{N}_{\phi(\alpha), \phi(-\eta)}
+	\end{align*}
+       \item Ist $\alpha-\xi\notin\Phi$, so ist $N_{-\xi,\alpha}=0=
+	\tilde{N}_{\phi(-\xi)\phi(\alpha)}$. Ist $\alpha-\xi\in\Phi$, so ist
+	$(\xi, \alpha-\xi)$ kein Gegenbeispiel. Bezeichnet man die
+	$\xi$"~Kette durch $\alpha-\xi$ mit $\alpha-\xi-s''\xi,\dotsc,
+	\alpha-\xi,\dotsc, \alpha-\xi+t''\xi$, so gilt also:
+	\begin{align*}
+	  N_{-\xi,\alpha} &= N_{\alpha,\xi-\alpha} = N_{\xi -\alpha,-\xi} =
+	     -N_{-\xi,\xi-\alpha}= (s''+1)t'' \nicefrac{\kappa_{L}(h_{\xi},
+	     h_{\xi})}{(2 N_{\xi, \alpha-\xi})}\\
+	  &= (s''+1)t'' \nicefrac{\kappa_{\tilde{L}}(\psi(h_{\xi}),
+	     \psi(h_{\xi}))}{(2 \tilde{N}_{\phi(\xi) \phi(\alpha-\xi)})}
+	     =\dotsb= \tilde{N}_{\phi(-\xi) \phi(\alpha)}
+	\end{align*}
+       \item Ist $\beta-\eta\notin\Phi$, so ist $N_{\beta,-\eta}$=0=
+	$N_{\phi(\beta) \phi(-\eta)}$. Ist $\beta-\eta\in\Phi$, so ist
+	$(\eta-\beta,\beta)$ kein Gegenbeispiel. Daher gilt:
+	\begin{align*}
+	  N_{\beta, -\eta} &= N_{-\eta, \eta-\beta}= N_{\eta-\beta,\beta}=
+	     \tilde{N}_{\phi(\eta-\beta)
+	       \phi(\beta)}=\dotsb=\tilde{N}_{\phi(\beta) \phi(-\eta)}
+	\end{align*}
+      \end{itemize}
+      Wie bereits erwähnt, folgt aus diesen Gleichungen insgesamt
+      $N_{\alpha\beta}= \tilde{N}_{\phi(\alpha)\phi(\beta)}$, d.\,h. $(\alpha,
+      \beta)$ war doch kein Gegenbeispiel. Damit haben wir gezeigt, dass
+      $N_{\alpha\beta}= \tilde{N}_{\phi(\alpha) \phi(\beta)}$ für alle
+      positiven Wurzeln $\alpha, \beta\in\Phi$ mit $\alpha+\beta\in\Phi$ gilt.
+      Für solche $\alpha, \beta$ ergibt sich dann $N_{-\alpha,-\beta}=
+      \tilde{N}_{\phi(-\alpha) \phi(-\beta)}$ aus \autoref{satz:86}. Es bleibt
+      $N_{\alpha\beta}= \tilde{N}_{\phi(\alpha) \phi(\beta)}$ in dem Fall zu
+      zeigen, dass eine der Wurzeln $\alpha, \beta$ positiv, die andere
+      negativ ist.
+
+      Wegen $N_{\alpha\beta}=-N_{\beta\alpha}$ können wir annehmen, dass
+      $\alpha$ positiv und $\beta$ negativ ist. Ist $\alpha+\beta$ positiv, so
+      sei $\alpha+\beta-s(-\beta),\dotsc,\alpha+\beta,\dotsc, \alpha+\beta+
+      t(-\beta)$ die $(-\beta)$"~Kette durch $\alpha+\beta$. Dann ist
+      \begin{align*}
+	N_{\alpha\beta} &= N_{\beta,-\alpha-\beta}= -(s+1)t
+	   \nicefrac{\kappa_{L}(h_{-\beta}, h_{-\beta})}{(2 N_{-\beta,
+	     \alpha+\beta})}\\
+	&= -(s+1)t \nicefrac{\kappa_{\tilde{L}}(\psi(h_{-\beta}),
+	   \psi(h_{-\beta}))}{(2 \tilde{N}_{\phi(-\beta) \phi(\alpha+\beta)})}
+	   =\dotsb= \tilde{N}_{\phi(\alpha) \phi(\beta)}
+      \end{align*}
+      Ist $\alpha+\beta$ negativ, so ist
+      \begin{align*}
+	N_{\alpha\beta} &= N_{\beta,-\alpha-\beta}= N_{-\alpha-\beta,\alpha} =
+	   \tilde{N}_{\phi(-\alpha-\beta) \phi(\alpha)}=\dotsb=
+	   \tilde{N}_{\phi(\alpha) \phi(\beta)}
+      \end{align*}
     \end{enumerate}
+    und der Satz bewiesen.
   \end{proof}
 \end{satz}
 
