--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -3842,6 +3842,35 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
   \end{proof}
 \end{satz}
 
+\chapter{Die klassischen Lie-Algebren}
+
+%bem 9.1
+\begin{bemerk}
+  Wir wissen schon, dass $\sl_{l+1}$ für $l\in\N$ eine einfache Lie-Algebra
+  mit Dynkindiagramm $A_{l}$ ist. Im folgenden werden Lie-Algebren mit
+  Dynkindiagramm vom Typ $B_{l}, C_{l}, D_{l}$ konstruieren. Dabei werden wir
+  das folgende Kriterium zum Nachweis der Einfachheit verwenden.
+\end{bemerk}
+
+\begin{satzON}
+  Seien $V$ ein endlich-dimensionaler $\C$"~Vektorraum und $L\subseteq\sl(V)$
+  eine Unteralgebra. Ist $V$ als $L$"~Modul irreduzibel, so ist $L$
+  halbeinfach.
+  \begin{proof}
+    Nach dem Satz von Lie (\autoref{satz:52-lie}) hat $S\colon= \Rad L$ einen
+    gemeinsamen Eigenvektor $v\in V$. Für $s\in S$ existiert also ein
+    $\lambda(s)\in\C$ mit $sv=\lambda(s)v$. Für $x\in L$ ist $[s,x]\in S$,
+    also $s(xv)= x(sv)+ [s,x]v= \lambda(s)xv+\lambda([s,x])v$. Da $V$ als
+    $L$"~Modul irreduzibel ist, wird $V$ von den Elementen $xv$ mit $x\in L$
+    aufgespannt. Daher hat $V$ eine Basis bezüglich der jedes $s\in S$ durch
+    eine obere Dreiecksmatrix mit Hauptdiagonale $\lambda(s)$ dargestellt
+    wird. Wegen $L\subseteq\sl(V)$ folgt $\lambda(s)=0$ für $s\in S$. Dann ist
+    aber $s(xv)=0$ für $s\in S, x\in L$. Wegen $V=\spn(xv\colon x\in L)$ folgt
+    $S=0$.
+  \end{proof}
+\end{satzON}
+
+
 \todo{Vorlesung vom 2007-06-13}
 
 \todo{Vorlesung vom 2007-06-19}
