--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -5824,16 +5824,15 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
 \begin{bsp}
   Sei $L$ halbeinfach mit Cartanzerlegung $L=H\oplus\bigoplus_{\alpha\in\Phi}
   \C e_{\alpha}$ wie üblich und sei $\Pi\subseteq\Phi$ Basis. Dann ist
-  $B(\Pi)\colon= H\oplus\bigoplus_{\alpha\in\Phi, \text{pos. bzgl} \Pi} \C
+  $B(\Pi)\colon= H\oplus\bigoplus_{\alpha\in\Phi, \text{pos. bezüglich } \Pi} \C
   e_{\alpha}$ eine Borelalgebra von $L$. Denn $N(\Pi)\colon=
-  \bigoplus_{\alpha\in\Phi, \text{pos. bzgl} \Pi} \C e_{\alpha}$ ist ein Ideal
+  \bigoplus_{\alpha\in\Phi, \text{pos. bezüglich } \Pi} \C e_{\alpha}$ ist ein Ideal
   in $B(\Pi)$ und $B(\Pi)/_{N(\Pi)}\cong H$ ist abelsch. Ferner ist $N(\Pi)$
   nilpotent. Denn für positive $\alpha_{1},\dotsc,\alpha_{n}\in\Phi$ ist
-  $[\dotso[e_{\alpha_{1}}, e_{\alpha_{2}}], e_{\alpha_{3}},\dotsc,
+  $[\dotso[e_{\alpha_{1}}, e_{\alpha_{2}}], e_{\alpha_{3}}],\dotsc,
   e_{\alpha_{n}}]\in L_{\alpha_{1}+\dotsb+\alpha_{n}}(H)$ und für $n\gg0$ ist
   $\alpha_{1}+\dotsb+\alpha_{n}\notin\Phi$, also
-  $L_{\alpha_{1}+\dotsb+\alpha_{n}}(H)=0$. Daher ist $B(\Pi)$ auflösbar (aber
-  nicht nilpotent).
+  $L_{\alpha_{1}+\dotsb+\alpha_{n}}(H)=0$. Daher ist $B(\Pi)$ auflösbar.
 
   Sei $K\subseteq L$ eine auflösbare Unteralgebra mit $B(\Pi)\subsetneq K$.
   Dann ist $H$ auch eine Cartanalgebra von $K$. Daher ist
@@ -5843,11 +5842,12 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
   $e_{-\alpha}\in K$.
   %Vorlesung vom 2007-07-18
   Wegen $e_{\alpha}\in B(\Pi)\subseteq K$ ist auch $h_{\alpha}=[e_{\alpha},
-  e_{-\alpha}]\in K$. Daher ist $U\colon=\C h_{\alpha}\oplus\oplus \C
+  e_{-\alpha}]\in K$. Daher ist $U\colon=\C h_{\alpha}\oplus \C
   e_{\alpha}\oplus\C e_{-\alpha}\subseteq K$ eine Unteralgebra, also
   auflösbar. Andererseits ist $[e_{\alpha}, e_{-\alpha}]=h_{\alpha},
-  [h_{\alpha}, e_{\alpha}]=\alpha(h_{\alpha})e_{\alpha}, [h_{\alpha},
-  e_{-\alpha}]= -\alpha(h_{\alpha})e_{-\alpha}$, also $U'=U$. \lightning{}
+  [h_{\alpha}, e_{\alpha}]=\underbrace{\alpha(h_{\alpha})}_{\neq0} e_{\alpha},
+  [h_{\alpha}, e_{-\alpha}]= \underbrace{-\alpha(h_{\alpha})}_{\neq0}
+  e_{-\alpha}$, also $U'=U$. \lightning{}
 \end{bsp}
 
 %satz 11.8
@@ -5860,14 +5860,14 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
     Nach \autoref{satz:111} existiert ein $\sigma$ in der Weylgruppe $W$ mit
     $\hat{\sigma}(\Pi)=\Pi'$. Schreibe $\sigma=\sigma_{\alpha_{1}}\circ\dotso
     \circ\sigma_{\alpha_{r}}$ mit $\alpha_{1},\dotsc,\alpha_{r}\in\Phi$. Dann
-    ist $\hat{\sigma}_{\alpha_{r}}(\Pi)$ eine Basis von $\Phi$ und es genügt
+    ist $\hat{\sigma}_{\alpha_{r}}(\Pi)$ eine Basis von $\Phi$, und es genügt
     zu zeigen, dass ein Element $\tau_{r}\in\FE(L)$ existiert mit
     $\tau_{r}(B(\Pi))=B(\hat{\sigma}_{\alpha_{r}}(\Pi))$. Der Rest ist dann
     Induktion nach $r$.
 
     Daher können wir annehmen: $\sigma=\sigma_{\alpha}$ für ein
     $\alpha\in\Phi$. Dann ist $H= \C h_{\alpha}\oplus(\C h_{\alpha})^{\perp}$.
-    mit $(\C h_{\alpha})^{\perp}=\ker(\alpha)$. Denn für $h\in H$ gilt,
+    mit $(\C h_{\alpha})^{\perp}=\ker(\alpha)$. Denn für $h\in H$ gilt:
     $h\in(\C h_{\alpha})^{\perp}\Leftrightarrow
     0=\underbrace{\kappa_{L}(h_{\alpha}, h)}_{\alpha(h)} \Leftrightarrow
     h\in\ker(\alpha))$.
@@ -5893,9 +5893,9 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
       (\exp\ad_{e_{\alpha}})(g_{\alpha}) &= g_{\alpha}+ [e_{\alpha},
 	 g_{\alpha}]+ \nicefrac{1}{2}[e_{\alpha}, [e_{\alpha},
 	 g_{\alpha}]]+\dotsb= g_{\alpha}-2e_{\alpha}\\
-      (\exp\ad_{-f_{\alpha}})(e_{\alpha}) &= e_{\alpha}+g_{\alpha}-f_{\alpha}\\
-      (\exp\ad_{-f_{\alpha}})(f_{\alpha}) &= f_{\alpha}\\
-      (\exp\ad_{-f_{\alpha}})(g_{\alpha}) &= g_{\alpha}-2f_{\alpha}
+      (\exp\ad_{-f_{\alpha}})(e_{\alpha}) &=\dotsb= e_{\alpha}+g_{\alpha}-f_{\alpha}\\
+      (\exp\ad_{-f_{\alpha}})(f_{\alpha}) &=\dotsb= f_{\alpha}\\
+      (\exp\ad_{-f_{\alpha}})(g_{\alpha}) &=\dotsb= g_{\alpha}-2f_{\alpha}
     \end{align*}
     Daher ist $\tau\colon=(\exp\ad_{e_{\alpha}})\circ(\exp\ad_{-f_{\alpha}})
     \circ (\exp\ad_{e_{\alpha}})\in\FE(L)$ mit
@@ -5908,7 +5908,8 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
     \end{align*}
     Ferner gilt für $h\in\ker(\alpha)$: $(\exp\ad_{e_{\alpha}})(h)=
     h+[e_{\alpha},h]+ \nicefrac{1}{2}[e_{\alpha},[e_{\alpha},h]]+\dotsb =
-    h-\alpha(h)=h$ und $(\exp\ad_{-f_{\alpha}})(h)=\dotsb=h$. Also $\tau(h)=
+    h-\alpha(h)e_{\alpha}+\dotsb =h$ und
+    $(\exp\ad_{-f_{\alpha}})(h)=\dotsb=h$. Also $\tau(h)=
     h$. Daher ist $\tau$ eine Fortsetzung von $\sigma_{\alpha}$.
 
     Zum Beweis von $\tau(B(\Pi))= B(\hat{\sigma}_{\alpha}(\Pi))$ genügt zu
@@ -5921,7 +5922,7 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
     \kappa_{L}(h_{\beta}, \sigma^{-1}_{\alpha}(h_{\gamma}))\tau(e_{\beta})=
     \kappa_{L}(\sigma_{\alpha}(h_{\beta}), h_{\gamma})\tau(e_{\beta})=
     \kappa_{L}(h_{\hat{\sigma}_{\alpha}(\beta)}, h_{\gamma})\tau(e_{\beta})=
-    (\hat{\sigma}_{\alpha}(\beta))(h_{\gamma})\tau(e_{\beta})$
+    (\hat{\sigma}_{\alpha}(\beta))(h_{\gamma})\tau(e_{\beta})$.
   \end{proof}
 \end{satz}
 
@@ -5929,7 +5930,7 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
 \begin{satz}\label{satz:119}
   Für jede Lie-Algebra $L$ gilt:
   \begin{enumerate}
-   \item Für jede Borelalgebra $B\subseteq L$ ist $B=N_{L}(B)$. (Borelalgebra
+   \item Für jede Borelalgebra $B\subseteq L$ ist $B=N_{L}(B)$. (Borelalgebren
     sind immer selbstnormalisierend.)
    \item Die Abbildung $B\mapsto B/_{\Rad(L)}$ ist eine Bijektion zwischen den
     Mengen der Borelalgebren in $L$ einerseits und in der Lie-Algebra
@@ -5943,7 +5944,7 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
      \item Für jede Borelalgebra $B\subseteq L$ ist $B+\Rad(L)$ eine
       auflösbare Unteralgebra von $L$. Denn $\Rad(L)$ ist auflösbares Ideal in
       $L$ und $B+\Rad(L)$ und $B+\Rad(L)/_{\Rad(L)}\cong B/_{B\cap\Rad(L)}$
-      ist auflösbar.Also ist $B+\Rad(L)=B$, d.\,h. $\Rad(L)\subseteq B$. Daher
+      ist auflösbar. Also ist $B+\Rad(L)=B$, d.\,h. $\Rad(L)\subseteq B$. Daher
       ist $B/_{\Rad(L)}\subseteq L/_{\Rad(L)}$ eine auflösbare Unteralgebra.
       Sei $\overline{C}\in L/_{\Rad(L)}$ eine Borelalgebra mit
       $B/_{\Rad(L)}\subseteq\overline{C}$. Dann ist $\overline{C}=
@@ -5955,7 +5956,7 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
       $\overline{C}\subseteq L/_{\Rad(L)}$ eine Borelalgebra. Dann ist
       $\overline{C}=C/_{\Rad(L)}$ mit einer auflösbaren Unteralgebra $C$ von
       $L$. Sei $B\subseteq L$ Borelalgebra mit $C\subseteq B$. Dann ist
-      $\Rad(L)\subseteq B$ und $B/_{\Rad(L)}\subseteq L/_{\Rad(L)}$ ist eine
+      $\Rad(L)\subseteq B$, und $B/_{\Rad(L)}\subseteq L/_{\Rad(L)}$ ist eine
       Borelalgebra. Wegen $\overline{C}=C/_{\Rad(L)}\subseteq B/_{\Rad(L)}$
       ist $\overline{C}=B/_{\Rad(L)}$. Damit ist die Surjektivität bewiesen.
     \end{enumerate}
@@ -5981,13 +5982,13 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
   Seien $H_{1}, H_{2}$ Cartanalgebren einer Lie-Algebra $L$. Dann existiert
   ein $\tau\in\FE(L)$ mit $\tau(H_{1})=H_{2}$.
   \begin{proof}
-    Für $I=1,2$ sei $B_{i}\subseteq L$ eine Borelalgebra mit $H_{i}\subseteq
+    Für $i=1,2$ sei $B_{i}\subseteq L$ eine Borelalgebra mit $H_{i}\subseteq
     B_{i}$. Nach \autoref{satz:1110} existiert ein $\sigma\in\FE(L)$ mit
     $\sigma(B_{1})=B_{2}$. Dann sind $\sigma(H_{1})$ und $H_{2}$
     Cartanalgebren von der Borelalgebra $B_{2}$. Nach \autoref{satz:117}
     existiert ein $\rho\in\FE(B_{2})$ mit $\rho(\sigma(H_{1}))=H_{2}$. Nach
     Definition von $\FE(L)$ kann man das $\rho$ zu einem $\rho'\in\FE(L)$
-    fortsetzen. Also $\tau\colon=\rho'\circ\sigma\in\FE(L)$ mit
+    fortsetzen. Also ist $\tau\colon=\rho'\circ\sigma\in\FE(L)$ mit
     $\tau(H_{1})=H_{2}$.
   \end{proof}
 \end{satz}
