- Link aufgeloest - Bemerkung ordentlich referenziert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1187 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -68,6 +68,7 @@
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage[all]{xy}
+\usepackage{aliascnt}
 
 \addtokomafont{sectioning}{\boldmath}
 
@@ -81,8 +82,10 @@
 % Die folgenden Umgebungen werden einzeln nummeriert und am Ende jedes
 % Kapitels zurückgesetzt
 \newtheorem{satz}{Satz}[chapter]
-\newtheorem{bemerk}[satz]{Bemerkung}
+\newaliascnt{bemerk}{satz}
+\newtheorem{bemerk}[bemerk]{Bemerkung}
 \newtheorem{defini}[satz]{Definition}
+\aliascntresetthe{bemerk}
 
 %\newtheorem{festl}{Festlegung}[chapter]
 
@@ -877,7 +880,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
   \end{gather*}
   \begin{proof}
     Sei $\nu\colon L\rightarrow L/_{I}$ kanonische Abbildung. Nach 
-    \autoref{bem:15} \help{Das muss Bemerkung heißen} ist $J/_{I}=\nu(J)$ Ideal in $\nu(L)=L/_{I}$. Sei
+    \autoref{bem:15} ist $J/_{I}=\nu(J)$ Ideal in $\nu(L)=L/_{I}$. Sei
     $\mu\colon L/_{I}\rightarrow (L/_{I})/_{(J/_{I})}$ kanonisch. Dann ist
     $\ker(\mu\circ\nu)=J$ (Nachrechnen). Wende den Homomorphiesatz auf
     $\mu\circ\nu$ an:
@@ -2117,7 +2120,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
     Nach dem \autoref{satz:63} ist $L\neq L'$. Damit ist die Ableitung echt
     kleiner als $L$. Nach \autoref{bem:61} Punkt (ii) ist
     $\kappa_{L'}=\kappa_{L}|L'\times L'=0$. Nach Induktion ist $L'$ auflösbar,
-    also auch $L$. \help{Warum heißt die Bemerkung hier Satz?}
+    also auch $L$.
   \end{proof}
 \end{satz}
 
@@ -3410,7 +3413,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
     h_{\alpha})} = \nicefrac{\kappa_{\tilde{L}}(\tilde{h}_{\phi(\alpha)},
     \tilde{h}_{\phi(\beta)})}{\kappa_{\tilde{L}}(\tilde{h}_{\phi(\alpha)},
     \tilde{h}_{\phi(\alpha)})}$.
-    Für $\alpha\in\Phi$ gilt nach Bem 6.8 \todo{Link einfügen}:
+    Für $\alpha\in\Phi$ gilt nach \autoref{bem:68}:
     $\kappa_{L}(h_{\alpha}, h_{\alpha})= \sum_{\beta\in\Phi}
     \kappa_{L}(h_{\beta}, h_{\alpha})^{2}$. Daher ist:
     \begin{align*}
@@ -3594,7 +3597,6 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
 \begin{satz}\label{satz:87}
   Mit den obigen Bezeichnungen existiert zu jeder positiven Wurzel
   $\beta\in\Phi\setminus\Pi$ genau ein ex\-tra\-spe\-zielles Paar
-  \todo{Hyphenation pruefen}
   $(\xi,\eta)\in\Phi\times\Phi$ mit $\beta=\xi+\eta$.
   \begin{proof}
     Schreibe $\beta=\sum_{\alpha\in\Pi} n_{\alpha}\alpha$ mit
@@ -4721,7 +4723,6 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
 	  &= -\langle f,g,ah\rangle-\langle g,h,af\rangle -\langle h,f,ag\rangle\\
 	  &= -\langle f,g,ah\rangle -\langle af,g,h\rangle -\langle f,ag,h\rangle=0
 	\end{align*}
-\todo{Punkt entfernen}
       \end{proof}
     \end{satzON}
 \end{bemerk}
@@ -5376,7 +5377,8 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
   Wurzelsystem $\Phi=\{\pm\alpha_{ij}\colon3\leq i<j\leq8\}\cup
   \{\pm\beta_{ijk}\colon 3\leq i<j<k\leq8\}\cup\{\pm\beta_{129}\}$ und Basis
   $\Pi=\{\alpha_{34},\dotsc,\alpha_{78}, \beta_{678}\}$ von $\Phi$. Das
-  Dynkindiagramm vom Typ $E_{6}$ hat die folgende Symmetrie: \todo{zeichen}.
+  Dynkindiagramm vom Typ $E_{6}$ hat die folgende Symmetrie: \todo{zeichen}
+  \help{Wie sah das Diagramm aus?}.
   Diese setzen wir zu einer linearen Bijektion $\phi\colon H^{*}\rightarrow
   H^{*}$ fort. Nach \autoref{satz:85} ist $\phi(\Phi)=\phi$. Die Wirkung von
   $\phi$ auf Wurzeln der Form
@@ -5520,8 +5522,6 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
   Daher hat der Coxetergraph von $\dot{H}$ bezüglich $\dot{\Pi}$ die Form
   o"~o=o"~o, d.\,h. $\dot{L}$ ist eine einfache Lie-Algebra vom Typ $F_{4}$.
 \end{bemerk}
-
-\todo{Vorlesung vom 2007-07-10}
 
 %Vorlesung vom 2007-07-11
 
@@ -5744,7 +5744,7 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
   Sei $\phi\colon K\rightarrow L$ ein Epimorphismus von Lie-Algebren. Dann ist
   $\phi(\mathfrak{N}(K))= \mathfrak{N}(L)$ und zu jedem $\tau\in\FE(L)$
   existiert ein $\sigma\in\FE(K)$ mit $\tau\circ\phi=\phi\circ\sigma$.
-  \todo{Diagramm einfügen}
+  \todo{Diagramm einfügen}\help{Wie sah das Diagramm aus?}
   \begin{proof}
     Bekanntlich gilt für $\alpha\in\C^{*}, y\in K\colon
     \phi(K_{\alpha}(\ad_{y}))= L_{\alpha}(\ad_{\phi(y)})$. Daher ist
