- Verweis auf Beispiel eingefuegt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1188 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -86,6 +86,7 @@
 \newtheorem{bemerk}[bemerk]{Bemerkung}
 \newtheorem{defini}[satz]{Definition}
 \aliascntresetthe{bemerk}
+\newtheorem{bspMN}{Beispiel}
 
 %\newtheorem{festl}{Festlegung}[chapter]
 
@@ -108,7 +109,7 @@
 \newcommand*{\satzautorefname}{Satz}
 \newcommand*{\bemerkautorefname}{Bemerkung}
 \newcommand*{\definiautorefname}{Definition}
-\newcommand*{\bspautorefname}{Beispiel}
+\newcommand*{\bspMNautorefname}{Beispiel}
 %\newcommand*{\festlautorefname}{Festlegung}
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
 % werden.
@@ -1730,7 +1731,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
 \end{satz}
 
 %bsp 4.5
-\begin{bsp}\label{bsp:45}
+\begin{bspMN}\label{bsp:45}
   Für $n\in\N$ bilden die Diagonalmatrizen eine Cartanalgebra $H=\Fh_{n}$ von
   $L=\gl_{n}$. Für $x,y\in H$ ist nämlich $[x,y]=xy-yx=0$, d.\,h. $H$ ist
   abelsch und damit nilpotent. Sei $a=(\alpha_{ij})\in N_{L}(H)$ und
@@ -1740,7 +1741,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
        \alpha_{ik}\xi_{kk}-\xi_{ii}\alpha_{ik}= \alpha_{ik}(\xi_{kk}-\xi_{ii})
   \end{gather*}
   Für $x=e_{kk}$ erhält man also $0=\alpha_{ik}$. Also ist $a\in H$.
-\end{bsp}
+\end{bspMN}
 
 %def 4.6
 \begin{defini}
@@ -2810,7 +2811,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
   und $\Rad(\sll_{n})=0$. Insbesondere ist $\sll_{n}$ eine halbeinfache
   Lie-Algebra.
 
-  Nach \autoref{bsp:45}\todo{richtige Referenz einfuegen} ist $\Fh_{n}$ eine Cartanalgebra von
+  Nach \autoref{bsp:45} ist $\Fh_{n}$ eine Cartanalgebra von
   $\gl_{n}$. Wegen $\gl_{n}=\sll_{n}\oplus \C 1_{n}$ ist daher
   $\Fh_{n}\cap\sll_{n}$ eine Cartanalgebra von $\sll_{n}$. Die entsprechenden
   Wurzeln sind die Abbildungen
