- Paket txfonts eingebunden - \CF --> \FF - falschen Zaehler korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1194 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -53,6 +53,7 @@
 \usepackage{braket}      %% Zur Eingabe von Mengen: A={x| x>2}
 \usepackage{booktabs}    %% schöne Linien in Tabelle
 \usepackage{wasysym}
+\usepackage{txfonts}
 
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
@@ -173,7 +174,7 @@
 \begin{document}
 
 \title{Lineare Optimierung}
-\author{Prof.\,Walter Alt}
+\author{bei Prof.\,Walter Alt}
 \date{Semester: SS 2006}
 \maketitle
 
@@ -3940,7 +3941,7 @@ Lösungsmenge des dualen Problems mit $S_{D}$.
 \section{Zur Konvergenz des Verfahrens}
 
 Typische Voraussetzungen:
-\begin{enumerate}{V1}
+\begin{enumerate}[V1]
  \item $m<n$ und $A$ hat vollen Rang $m$
  \item Das primale Problem hat keine entartete Ecke.
  \item Das duale Problem hat keine entartete Basislösung.
@@ -3957,15 +3958,15 @@ $i\in J_{B}$.
 %lem 5.20
 \begin{lemma}
   Sei obige Voraussetzung (V2) erfüllt. Dann gibt es ein $\epsilon_{1}>0$, so
-  dass gilt: Zu jedem $x\in\CF_{P}$ gibt es eine Basis $B$ von $A$ mit
+  dass gilt: Zu jedem $x\in\FF_{P}$ gibt es eine Basis $B$ von $A$ mit
   $x_{B}>\epsilon_{1}$.
   \begin{proof}
-    Aus dem \autoref{satz:232} folgt, dass $\CF_{P}$ endlich viele Ecken
+    Aus dem \autoref{satz:232} folgt, dass $\FF_{P}$ endlich viele Ecken
     $\nu^{(1)},\dotsc,\nu^{(k)}$ hat. Wegen der Voraussetzung (V2) hat jedes
     $\nu^{(i)}$ mindestens $m$ positive Komponenten. Wegen
     $\nu^{(i)}_{N}=0_{n-m}$ folgt, dass $\nu^{(i)}$ hat genau $m$ positive
     Komponenten hat. Wir definieren $\omega\coloneqq\min\{\nu^{(i)}_{j}\colon
-    \nu^{(i)}_{j}>0, i=1,\dotsc,k, j=1,\dotsc,n\}$.  Sei nun $x\in\CF_{P}$
+    \nu^{(i)}_{j}>0, i=1,\dotsc,k, j=1,\dotsc,n\}$.  Sei nun $x\in\FF_{P}$
     beliebig. Nach \autoref{eq:234} kann man $x$ in folgender Form darstellen:
     \begin{gather*}
       x=\sum_{i=1}^{k} \alpha_{i} \nu^{(i)}+d\qquad\alpha_{i}\geq0,
