ggT und kgV mit DeclareMathOperator
In der Diskussion in <news:slrnfie996.79m.joerg@alea.gnuu.de> ist
rausgekommen, dass die Verwendung von \DeclareMathOperator vollkommen in
Ordnung ist. Man setzt diese Funktionsnamen aufrecht – was ja auch
\operatorname bereits macht.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1203 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -133,8 +133,6 @@
 \newcommand*{\F}{\mathbb{F}}
 \newcommand*{\U}{\mathbb{U}}
 \newcommand*{\PP}{\mathbb{P}}
-\newcommand*{\ggt}{\operatorname{ggT}}
-\newcommand*{\kgv}{\operatorname{kgV}}
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
@@ -188,6 +186,8 @@
 \DeclareMathOperator{\ord}{ord}
 \DeclareMathOperator{\rg}{rk}
 \DeclareMathOperator{\diag}{diag}
+\DeclareMathOperator{\ggt}{ggT}
+\DeclareMathOperator{\kgv}{kgV}
 
 \makeindex
 
