Eine hyperref‐Warnung behoben.
hyperref kann mit "~ in einer Überschrift nicht umgehen. Da der Nicht‐Umbruch
an der Stelle nicht notwendig ist, habe ich einfach den normalen Bindestrich
genommen.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1205 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -1827,7 +1827,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
   \end{enumerate}
 \end{fakt}
 
-\section{Das \textsc{Sylow}"~Paket}
+\section{Das \textsc{Sylow}-Paket}
 
 \begin{defini}
   Sei $G$ eine endliche Gruppe und $p\in\PP, \abs{G}=p^{n}\cdot q,
