Typographische Feinarbeit (\colon, \, in Abkürzungen)
git-svn-id: https://svn.lug-jena.de/uni-skripte@1207 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -834,9 +834,9 @@ Dies sind die einfachsten Gruppen.
   Sei $G$ endliche Gruppe mit $\card G = n$.
   Wir bilden $G$ nach $S_n$ ab: Jedes $g \in G$ verursacht durch
   Linksmultiplikation eine Abbildung von $l_g\colon G \rightarrow
-  G : x \mapsto gx$. ($l_g$ im allgemeinen kein Homomorphismus)
+  G\colon x \mapsto gx$. ($l_g$ im allgemeinen kein Homomorphismus)
   
-  Also Abbildung $l : G \rightarrow S (X)$, $X = G$ , $l_g$ ist stets
+  Also Abbildung $l\colon G \rightarrow S (X)$, $X = G$ , $l_g$ ist stets
   Bijektion.
   
   Wir zeigen (i) $l$ ist Homomorphismus, (ii) $l$ ist injektiv.
@@ -852,7 +852,7 @@ Dies sind die einfachsten Gruppen.
 \begin{defini}
   Eine Permutation heiﬂt \highl{Zyklus}: Es existieren
   $x_1, x_2, \ldots, x_m \in \{1, 2, \ldots, n\}$ $m \geqslant 2$, paarweise
-  verschieden s.d.
+  verschieden s.\,d.
   \begin{enumerate}
     \item $\sigma x_1 = x_2, \sigma x_2 = x_3, \ldots, \sigma x_m = x_1$
     
@@ -984,7 +984,7 @@ auf Reihenfolge eindeutig.
 
 \subsection{1.4 - Normalteiler}
 
-Beobachtung: $f : G \rightarrow H$ Homomorphismus, $N = \ker (f)$ hat
+Beobachtung: $f \colon G \rightarrow H$ Homomorphismus, $N = \ker (f)$ hat
 spezifische Eigenschaft.
 
 $x \in N$, $s \in G \Rightarrow s x s^{- 1} \in N$
@@ -996,7 +996,7 @@ Kompakt: $s N s^{- 1} = N \Leftrightarrow s N = N s$
 Diese Eigenschaft haben beliebige Untergruppen nicht: $G = S_3,$ $N
 =\{\iota, (1, 2)\}$
 
-$z.B. (1, 3) (1, 2) (1, 3)^{- 1} = (1, 3) (1, 2) (1, 3) = (2, 3) \notin N$.
+z.\,B. $(1, 3) (1, 2) (1, 3)^{- 1} = (1, 3) (1, 2) (1, 3) = (2, 3) \notin N$.
 
 \begin{defini}
   Eine Untergruppe $H \subset G$ mit der Eigenschaft $sGs^{- 1} = H \forall s
