--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -1,6 +1,6 @@
 % Einige zusätzliche Informationen für rubber
 %  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
-% rubber: clean $base.thm
+% rubber: clean $base.thm 464px-Evariste_galois.pdf
 %  rubber soll nach Änderungen an der Datei nochmal bauen
 % rubber: watch $base.thm
 % rubber: makeidx.tool      xindy
